# rqt_bag_annotator

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
resource/: annotator_widget.ui
scripts/: rqt_bag_annotator
src/rqt_bag_annotator/: annotator.py  main_widget.py  utils.py
